# mapguide-api-bindings

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.cmd  build_tools.cmd  build_tools.sh  cmake_build.cmd  cmake_build.sh  dotnet_test.cmd  envsetup.cmd  envsetup.sh  envsetupsdk.cmd  envsetupsdk.sh  get_distro.sh  make_archives.cmd  nuget.config  php_test.cmd  replacements.txt  sdkify.cmd  swigsetup.sh  test_dotnet.sh  test_dotnet_core.cmd  test_dotnet_full.cmd  test_java.cmd  test_java.sh  test_php.cmd
Env/3.1/: Constants.xml  MapGuideApiGen.xml  setup.cmd  setup.sh
linux_build/: make_boxes.cmd
linux_build/CentOS6_x64/: Vagrantfile  provision.sh
linux_build/CentOS6_x86/: Vagrantfile  provision.sh
linux_build/DotNet/: Dockerfile
linux_build/DotNet/Ubuntu14_x64/: Vagrantfile  dotnet.sh  provision.sh
linux_build/Ubuntu14_x64/: Vagrantfile  provision.sh
linux_build/Ubuntu14_x86/: Vagrantfile  provision.sh
linux_build/packer/: README.txt  ubuntu14-amd64.json  ubuntu14-i386.json
linux_build/packer/scripts/centos/: virtualbox.sh
linux_build/packer/scripts/centos6/: base.sh
linux_build/packer/scripts/common/: vagrant.sh
linux_build/packer/scripts/mapguide/: centos32.sh  centos64.sh  ubuntu32.sh  ubuntu64.sh
linux_build/packer/scripts/ubuntu/: virtualbox.sh
runtimes/php/: README.txt
sdk/: README.md
src/: CMakeLists.txt
src/Bindings/: Bindings.sln  CMakeLists.txt
src/Bindings/Common/: refcount.i
src/Bindings/Common/DotNet/: coreclr_compat.i  custom.i  string.i  sugar.i
src/Bindings/Common/Java/: exception.i  extensions.i  monkey_patch.i
src/Bindings/Common/Php/: exception.i  monkey_patch.i  pointer.i
src/Bindings/DotNet/: CMakeLists.txt  DotNetUnmanagedApi.rc  DotNetUnmanagedApi.vcxproj  README.md  dotnetcore.i
src/Bindings/DotNet/MapGuideDotNetApi/: MapGuideDotNetApi.csproj  project.json
src/Bindings/DotNet/MapGuideDotNetApi/Properties/: AssemblyInfo.cs
src/Bindings/DotNet/MapGuideDotNetApi/custom/: MgClassMap.cs  MgObjectFactory.cs  Streams.cs
src/Bindings/DotNet/MapGuideDotNetApi/runtimes/ubuntu.14.04-x64/: readme.txt
src/Bindings/DotNet/MapGuideDotNetApi/runtimes/win7-x64/native/: readme.txt
src/Bindings/DotNet/MapGuideDotNetCoreApi/: MapGuideDotNetCoreApi.xproj  project.json
src/Bindings/DotNet/MapGuideDotNetCoreApi/custom/: EntryPoint.cs  MgClassMap.cs  MgObjectFactory.cs
src/Bindings/DotNetCore/: CMakeLists.txt  DotNetCoreApi.rc  DotNetCoreApi.vcxproj  Makefile  dotnetcore.i
src/Bindings/DotNetCore/MapGuideDotNetCoreApi/: project.json
src/Bindings/DotNetCore/MapGuideDotNetCoreApi/custom/: DnxCoreShims.cs  ManagedException.cs  MgObjectFactory.cs
src/Bindings/DotNetCore/wrapper/custom/: ManagedException.cs
src/Bindings/DotNetCore/wrapper/runtimes/win7-x86/native/: readme.txt
src/Bindings/Java/: CMakeLists.txt  DIFFERENCES.txt  InitializeWebTier.cpp  JavaApi.rc  JavaApi.vcxproj  JavaApiEx.vcxproj  Makefile.am  README.md  getclassid.code  java.i  javaextensions.i
src/Bindings/Java/org/osgeo/mapguide/: ObjectFactory.java
src/Bindings/Php/: CMakeLists.txt  PhpApi.vcxproj  PhpClassMap.cpp  PhpLocalizer.cpp  README.md  php.i
src/Bindings/mapviewerphp/: README.txt
src/FileReplace/: FileReplace.sln  FileReplace.vcxproj  main.cpp
src/IMake/: CMakeLists.txt  IMake.cpp  IMake.sln  IMake.vcxproj  IMake.xsd  Makefile  SimpleXmlParser.cpp  SimpleXmlParser.h  stdafx.h
src/Managed/DotNet/MapGuideDotNetApi/: MapGuideDotNetApi.csproj
src/Managed/DotNet/MapGuideDotNetApi/Properties/: AssemblyInfo.cs
src/Managed/DotNet/MapGuideDotNetApi/custom/: MgStringCollection.cs
src/MapGuide/: README.txt
src/Test/Dnx/: Dnx.sln
src/Test/Dnx/src/TestCommon/: ApiTypes.cs  Assert.cs  CommonUtility.cs  ITestExecutor.cs  ITestExecutorCollection.cs  ITestLogger.cs  PlatformApiTestExecutor.cs  Sqlite.cs  TestCommon.csproj  TestCommon.xproj  TestDataRoot.cs  TestExecutionRun.cs  TestExecutorBase.cs  TestResult.cs  UnitTestException.cs  project.json
src/Test/Dnx/src/TestMapGuide/: Program.cs  TestMapGuide.xproj  project.json
src/Test/Dnx/src/TestMapGuideApi/: MapGuideTestExecutorCollection.cs  MapGuideTests.cs  TestMapGuideApi.csproj  TestMapGuideApi.xproj  project.json
src/Test/Dnx/src/TestRunner/: Program.cs  TestRunner.csproj  TestRunner.xproj  project.json
src/Test/DotNet/: DotNet.sln  FullFramework.sln  NuGet.config
src/Test/DotNet/src/TestCommon/: CommonTests.cs  CommonUtility.cs  ITestExecutor.cs  PlatformApiTestExecutor.cs  PlatformResources.cs  TestCommon.csproj  TestDataRoot.cs  TestExecutionRun.cs  TestExecutorBase.cs
src/Test/DotNet/src/TestCommonFull/: TestCommonFull.csproj  packages.config
src/Test/DotNet/src/TestMisc/: Program.cs  (+1 more)
src/Test/Java/: README.txt  build.xml
src/Test/Php/: DrawingServiceAPI.php  FeatureServiceAPI.php  MapLayerAPI.php  MappingServiceAPI.php  MappingServiceHttpRequests.php  ResourceServiceAPI.php  SQLiteEngine.php  ServerAdminAPI.php  SiteServiceAPI.php  Test1.php  UpdateDumpFiles.php  Utils.php  ValidateUtils.php  WebLayoutAPI.php  createSdf.php  createSdfUnicode.php  master.php  setResourceData.php  sqlite_constants.php  testAwSelection.php
src/Test/Php/MapAgentShim/: index.php
src/TestData/FeatureService/: FeatureServiceTest.dump
src/TestData/FeatureService/SQLite/: SavePointTest.FeatureSource  UT_FdoJoin.FeatureSource  UT_Parcels_SQLite_Join.FeatureSource
src/TestData/ResourceService/: ResourceServiceTest.dump
src/TestData/Samples/Sheboygan/: build.bat
src/Tools/: CMakeLists.txt  Tools.sln  global.json
src/Tools/ClassMapGen/: ClassMapGen.csproj  Program.cs
src/Tools/ClassMapGen/Data/: README.txt  classmap_master.json
src/Tools/ClassMapGen/Data/Templates/: dotnet.txt  java.txt  php.txt
src/Tools/Common/: helpers.h
src/Tools/PhpPostProcess/: CMakeLists.txt  Program.cs  main.cpp
src/Tools/StampVer/: CMakeLists.txt  Program.cs  StampVer.csproj  StampVer.xproj  main.cpp  project.json  project.lock.json
src/Tools/SwigPrepare/: CMakeLists.txt  Program.cs  SwigPrepare.csproj  SwigPrepare.xproj  main.cpp  project.json  project.lock.json
(+238 files in other folders)
